Compilable and various issues fixed. SongImpl unit tests OK but STILL need to AI-check Song and MixiMix + unit tests & SongInternal  THEN need to test UI editors etc.